[tool.poetry]
name = "unitstools"
version = "0.1.0"
description = "Unitstools is a Python library that helps to manage units of measurement in code via static typing."
authors = ["Aloizio Macedo <aloiziomacedo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
